klassiker anpassungen (mobile screen und bilder reihenfolge)

--- a/indexKlassiker.html
+++ b/indexKlassiker.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Klassiker Pfungstadt</title>
+    <title>Klassik-Ensemble Pfungstadt</title>
 
     <!-- Reset -->
     <link rel="stylesheet" href="css/reset.css">
@@ -35,7 +35,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Klassikensemble</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Klassik-Ensemble</a>
         <button class="navbar-toggler navbar-toggler-right"
                 type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -81,14 +81,9 @@
         <div class="container background-medium roundedCorners">
 
             <!-- title -->
-            <h1 class="header_left hidden_mobile">Das Klassikensemble</h1>
+            <h1 class="header_left">Das Klassik-Ensemble</h1>
             <!-- flexbox container -->
             <section class="info-section-background">
-
-                <!--                &lt;!&ndash; flex item 2 &ndash;&gt;-->
-                <!--                                <div class="container_media_side" role="img">-->
-                <!--                                    <img class="img-fluid rounded-circle hidden_mobile" src="../img/LogoStreicher.png" alt="">-->
-                <!--                                </div>-->
 
                 <!-- flex item 1 -->
                 <div class="container_side" role="contentinfo">
@@ -127,12 +122,6 @@
                         Die Proben finden donnerstags von 18:30 bis 21:00 Uhr in Pfungstadt in der Lessingschule statt.
                     </p>
 
-                    <!-- mobile flex item only -->
-                    <div id="hidden_desktop" role="img">
-                        <img class="img-fluid rounded-circle" id="hidden_desktop" src="../img/Probenort.png" alt="">
-                    </div>
-
-
                     <h2 class="blocksatz">Mitmusiker gesucht!</h2>
 
                     <p class="blocksatz">
@@ -140,11 +129,6 @@
                         Kontakt: Wilfried Bankhardt/Kirstin Kramer, Mail an: klassiker[at]musikverein-pfungstadt.de
                     </p>
                 </div>
-                <!--                &lt;!&ndash; flex item 2 &ndash;&gt;-->
-                <!--                <div class="container_media_side" role="img">-->
-                <!--                    <img class="img-fluid rounded-circle hidden_mobile" src="../img/Probenort.png" alt="">-->
-                <!--                </div>-->
-
 
             </section>
         </div>
@@ -236,7 +220,14 @@
 
             <h2>Presse</h2>
             <div class="ol-md-12" role="img">
-                <img class="roundedCorners" src="../img/ArtikelKlassiker.jpg" alt="">
+
+                <div class="hidden_mobile">
+                    <img class="roundedCorners " src="../img/ArtikelKlassiker.jpg" alt="">
+                </div>
+
+                <div id="hidden_desktop">
+                    <img class="roundedCorners presseArtikel" src="../img/ArtikelKlassiker.jpg" alt="">
+                </div>
             </div>
         </div>
     </div>
@@ -279,11 +270,10 @@
         <div class="row">
             <div class="col-lg-8 mx-auto">
                 <h2>Kontakt</h2>
-
-                <br>
-                Wilfried Bankhardt/Kirstin Kramer
-                <br>
-                klassiker[at]musikverein-pfungstadt.de
+                <p>
+                    Wilfried Bankhardt/Kirstin Kramer
+                    <br>
+                    klassiker[at]musikverein-pfungstadt.de
                 </p>
 
 
