noch ein artikel fuer klassiker

--- a/indexKlassiker.html
+++ b/indexKlassiker.html
@@ -228,6 +228,16 @@
                 <div id="hidden_desktop">
                     <img class="roundedCorners presseArtikel" src="../img/ArtikelKlassiker.jpg" alt="">
                 </div>
+
+                <div class="hidden_mobile">
+                    <img class="roundedCorners " src="../img/KlassikerInEcho.png" alt="">
+                </div>
+
+                <div id="hidden_desktop">
+                    <img class="roundedCorners presseArtikel" src="../img/KlassikerInEcho.png " alt="">
+                </div>
+
+
             </div>
         </div>
     </div>
