backgrund verbessert klassiker

--- a/indexKlassiker.html
+++ b/indexKlassiker.html
@@ -161,8 +161,8 @@
 
 
 <!-- Repertoire Section -->
-<section id="repertoire" class=" termine-section content-section text-center">
-    <div class="container">
+<section id="repertoire" class=" termine-section content-section text-center background-medium">
+    <div class="container background-medium">
         <div class="col-md-8 termine mx-auto roundedCorners">
             <!-- <h2>Repertoire</h2> -->
 
@@ -212,7 +212,7 @@
 </section>
 
 
-<!-- Repertoire Section -->
+<!-- Presse Section -->
 <section id="presse" class=" content-section text-center">
     <div class="container">
         <div class="col-md-12 termine mx-auto roundedCorners">
