--- a/BigBand/index.html
+++ b/BigBand/index.html
@@ -124,7 +124,7 @@
                 <!-- flex item 1 -->
                 <div class="container_media_side" role="img">
                     <img class="img-fluid rounded-circle hidden_mobile" src="../img/TenorSax.png" alt="">
-<!--                    <img class="img-fluid rounded-circle hidden_mobile" src="img/AltSax.jpg" alt="">-->
+                    <!--                    <img class="img-fluid rounded-circle hidden_mobile" src="img/AltSax.jpg" alt="">-->
                 </div>
                 <!-- flex item 2 -->
                 <div class="container_side special_padding_bottom" role="content">
@@ -262,35 +262,36 @@
     <div class="container">
         <div class="col-md-8 termine mx-auto roundedCorners blass">
 
-            <h2>Musiker</h2>
+            <h2>Musiker </h2>
             <!-- desktop version -->
+            <p>Das Foto im Hintergrund entspricht nicht der aktuellen Besetzung, die steht hier: </p>
+
             <div class="col-md-10 mx-auto">
                 <ul class="small">
                     <p class="bold"> Reed Section (Holzbläser)</p>
                     <li> Dr. Jon Wood Altsaxophon, Klarinette</li>
-                    <li>Matthias Neuber Altsaxophon</li>
                     <li>Katrin Rose Altsaxophon</li>
-                    <li>Siegfried Dittmann Tenorsaxophon, Baritonsaxophon</li>
-                    <li>Peter Putz Tenorsaxophon, Baritonsaxophon</li>
+                    <li>Siegfried Dittmann Tenor/Baritonsaxophon</li>
+                    <li>Beate Bechtluft Tenorsaxophon</li>
+                    <li>Chris Marpe Alt/Tenorsaxophon</li>
+                    <li>Tanja Buchmann-Keller Baritonsaxophon</li>
 
                     <br>
                     <p class="bold">Brass Section (Blechbläser)</p>
                     <li> Klaus Sterzik Posaune</li>
-                    <li> Katja Völger Posaune</li>
-                    <li> Wilhelm Crössmann Posaune</li>
                     <li> Jürgen Grellmann Posaune</li>
-                    <li> Dr. Stephan Bott Trompete</li>
+                    <li> Ottmar Zucker Posaune</li>
                     <li> Werner Bopp Trompete</li>
-                    <li> Willi Weinberger Trompete</li>
+                    <li> Harald Möglich Trompete</li>
+                    <li> Angelika Angert Trompete</li>
                     <br>
                     <p class="bold"> Rhythm Section (Rhythmus)</p>
                     <li> Michael Ruppersberg Piano</li>
                     <li> Dr. Michael Montag Gitarre</li>
-                    <li> Ulrich Vaeth Gitarre</li>
                     <li> Frank Burschel Bass</li>
                     <li> Dr. Hans Günter Neiss Bass</li>
                     <li> Gerold Arheilger Schlagzeug</li>
-                    <li> Gero Grieser Schlagzeug</li>
+                    <li> Harald Schween Schlagzeug</li>
                 </ul>
             </div>
         </div>
@@ -304,18 +305,48 @@
         <div class="col-md-8 termine mx-auto roundedCorners">
             <!-- <h2>Repertoire</h2> -->
 
-            <h2>Auftritte Sommer/Herbst 2023</h2>
+            <h2>Auftritte 2025</h2>
             <div class="col-md-10 mx-auto">
 
-                <p class="blocksatz"> 10.08.2023 11:00 Ortskernfest Roßdorf
+                <p class="blocksatz">
+                    01.05.2025 19:00 Asklepius Klinik Alsbach
                     <br>
-                    25.08.2023 19:00 Asklepius Klinik Alsbach
+                    29.06.2025 11:00-13:00 Nauheim
                     <br>
-                    22.09.2023 18:45 Asklepius Klinik Alsbach
+                    06.07.2025 17:45 Pfungo Pfungstadt
                     <br>
-                    13.10.2023 18:45 Asklepius Klinik Alsbach
+                    11.07.2025 19:00 Asklepius Klinik Alsbach
                     <br>
-                    09.12.2023 19:00 Adventskonzert Eschollbrücken</p>
+                    29.08.2025 19:00 Asklepius Klinik Alsbach
+                    <br>
+                    04.09.2025 18:00 Halbermond Heppenheim
+                    <br>
+                    26.09.2025 19:00 Asklepius Klinik Alsbach
+                    <br>
+                    17.10.2025 19:00 Asklepius Klinik Alsbach
+                    <br>
+                    21.11.2025 19:00 Asklepius Klinik Alsbach
+                    <br>
+                    06.12.2025 Eschollbrücken (?)
+                    <br>
+                    12.12.2025 19:00 Asklepius Klinik Alsbach
+                    <br>
+                    19.12.2025 tba Pfungstadt
+                </p>
+            </div>
+
+            <h2>Ausblick: Jubiäumskonzerte 2026</h2>
+            <div class="col-md-10 mx-auto">
+
+                <p class="blocksatz">
+                    11.04.2026 18:00-20:00 MV & Friends, TSV-Halle Eschollbrücken
+                    <br>
+                    21.06.2026 10:00-13:30 Frühschoppen, altes E-Werk Pfungstadt
+                    <br>
+                    22.08.2066 19:00 – 22:00 Festkonzert, altes E-Werk Pfungstadt
+                    <br>
+                    14.11.2026 19:30 Sing Along, evangelische Kirche Pfungstadt
+                </p>
             </div>
 
 
@@ -555,8 +586,13 @@
                 <!-- JUMBOTRON -->
                 <div class="carousel">
                     <div class="jumbotron jumbotron-bb1"></div>
-                    <div class="jumbotron jumbotron-bb2"></div>
                     <div class="jumbotron jumbotron-bb3"></div>
+                    <div class="jumbotron jumbotron-bb4"></div>
+                    <div class="jumbotron jumbotron-bb5"></div>
+                    <div class="jumbotron jumbotron-bb6"></div>
+                    <div class="jumbotron jumbotron-bb7"></div>
+                    <div class="jumbotron jumbotron-bb8"></div>
+                    <div class="jumbotron jumbotron-bb9"></div>
                 </div>
                 <!-- transparent div with buttons -->
                 <div id="transparent" class="gallery-nav hidden_mobile">
@@ -564,6 +600,8 @@
                     <a class="button next">></a>
                 </div>
             </div>
+
+            <p class="blocksatz">Bilder vom Phungo: Chris Marpe </p>
         </div>
     </div>
 </section>
