--- a/indexKlassiker.html
+++ b/indexKlassiker.html
@@ -51,6 +51,9 @@
                     <a class="nav-link js-scroll-trigger" href="#musiker">Musiker</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#auftritte">Auftritte</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#repertoire">Repertoire</a>
                 </li>
                 <li class="nav-item">
@@ -159,6 +162,45 @@
     </div>
 </section>
 
+
+<!-- Auftritte Section -->
+<section id="auftritte" class="termine-section content-section text-center">
+    <div class="container">
+        <div class="col-md-8 termine mx-auto roundedCorners">
+
+            <h2>Auftritte 2025/2026</h2>
+            <div class="col-md-10 mx-auto">
+
+                <p class="blocksatz">
+                    Do 27.11.2025, 16:30 Uhr, Lesung Claudia Stehle
+                    <br>
+                    Bürgerzentrum Hahn
+                    Gernsheimer Straße 42 in Pfungstadt-Hahn
+                    <br>
+                    <br>
+                    So 30.11.2025, 17:00 Uhr, Adventskonzert
+                    <br>
+                    ev. Kirche, Kirchstr. 33 in Pfungstadt
+                    <br>
+                    <br>
+                    So 14.12.2025, 16:00 Uhr, Weihnachtsmarkt
+                    <br>
+                    Säulenhalle Historisches Rathaus, Kirchstr. 1 in Pfungstadt
+                    <br>
+                    <br>
+                    Sa 25.04.2026, 18:00 Uhr, Frühlingskonzert
+                    <br>
+                    mit dem Gesangverein Sängerlust 1882 Hahn e.V. und dem Klassik-Ensemble des
+                    Musikvereins Pfungstadt 1926,
+                    <br>
+                    ev. Kirche Hahn, Gernsheimer Str. 70 in Pfungstadt-Hahn
+                    <br>
+                    <br>
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
 
 <!-- Repertoire Section -->
 <section id="repertoire" class=" termine-section content-section text-center background-medium">
