--- a/index.html
+++ b/index.html
@@ -140,17 +140,21 @@
 
                 <!-- mobile flex item 3 -->
                 <div class="container_media_side" id="hidden_desktop" role="img">
-                    <img class="img-fluid rounded-circle" id="hidden_desktop" src="img/LogoFusion.png" alt="">
-                    <p class="blocksatz bold">Fusion Band
-                        <br>
-                        Mittwochs, 18:30-21:00
-                    </p>
+                    <a href="indexFusion.html">
+                        <img class="img-fluid rounded-circle" id="hidden_desktop" src="img/LogoFusion.png" alt="">
+                        <p class="blocksatz bold">Fusion Band
+                            <br>
+                            Mittwochs, 18:30-21:00
+                        </p>
+                    </a>
+
+
                 </div>
 
                 <!-- desktop flex item 3 -->
 
                 <div class="container_side hidden_mobile" role="contentinfo">
-
+                    <a href="indexFusion.html">
                     <p class="blocksatz bold">Fusion Band</p>
 
                     <div class="bild_logo " role="img">
@@ -162,6 +166,7 @@
                         Mittwochs, 18:30-21:00
                         <!--                        <br>(14-tägig)-->
                     </p>
+                    </a>
                 </div>
 
             </section>
