fusionband image css an andere angepasst und vereinsbild aktualisiert

--- a/BigBand/index.html
+++ b/BigBand/index.html
@@ -68,7 +68,7 @@
 </nav>
 
 <!-- Intro Header -->
-<header class="landingpage">
+<header class="landingpageBigBand">
     <!-- bild ist im css -->
 </header>
 
